--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,4 +10,4 @@ overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {}
+rules: { import/no-extraneous-dependencies: [0, { devDependencies: true }] }
