--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
   },
   "homepage": "https://github.com/ottokirik/js-oop-project-62#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@jest/globals": "^29.5.0",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "prettier": "^2.8.7"
   }
 }
