--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,13 +1,15 @@
 plugins:
   - jest
+  - prettier
 env:
   node: true
   es2021: true
 extends:
   - airbnb-base
   - plugin:jest/recommended
+  - prettier
 overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: { import/no-extraneous-dependencies: [0, { devDependencies: true }] }
+rules: { import/no-extraneous-dependencies: [0, { devDependencies: true }], prettier/prettier: 'error' }
